Commit 61: Fixed overflow issue in group chat

--- a/client/src/GroupRoom/GroupChat/GroupChat.css
+++ b/client/src/GroupRoom/GroupChat/GroupChat.css
@@ -1,7 +1,7 @@
 #group_chat {
   font-family: "Inter", sans-serif;
   border-radius: 1vh;
-  display: flex;
+  display:flex;
   flex-direction: column;
   padding-top: 1%;
   border-right: 5px solid #F2F3F5;
@@ -13,7 +13,7 @@
   justify-content: space-between;
   display: flex;
   padding-top: 25px;
-  flex-direction: column;
+  justify-self: flex-start;
 }
 
 .dropdown-dash_button {
@@ -64,8 +64,13 @@
 }
 
 .overflow{
-  overflow: auto;
-  -ms-overflow-style: none;
+  overflow: scroll;
+  /* -ms-overflow-style: none; */
+  flex-grow: 1;
+}
+
+.grow{
+  flex-grow: 1;
 }
 
 #bottom_chat{
@@ -78,6 +83,7 @@
   border-radius: 1vh;
   margin: 1%;
   padding: 5px;
+  justify-self: flex-end;
   /* position: fixed; */
 }
 
